# eis_toolkit

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENCE  README.md  README.rst  THIRD-PARTY-LICENSES  cba_out.tif  docker-compose.yml  environment.yml  index.html  mkdocs.yml  mkgendocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/ISSUE_TEMPLATE/: bug-report.md  tool-request.md
.github/workflows/: build_binary.yml  conda.yml  docker.yaml  pre-commit.yaml  tests.yml
bayesian_nn/: bayesian_nn.py
bernd/: ann_classifier.py  ann_regression.py  binarization_inImport_alt.py  checkforerrors.py  export_featureclass.py  export_grid.py  featureclass_to_geopandas.py  import_featureclass.py  import_grid.py  import_grid_alt.py  logistic_regression.py  logistic_regression_alt.py  mlp_classifier.py  mlp_classifier_alt.py  mlp_regressor.py  mlp_regressor_alt.py  model_fit.py  model_prediction.py  model_testsplit.py  modell_crossvalidation.py  nodata_remove.py  nodata_replace.py  onehotencoder.py  randomforest_classifier.py  randomforest_classifier_alt.py  randomforest_regressor.py  randomforest_regressor_alt.py  separation.py  target_separation_alt.py  test_frame_fc.py  test_frame_image.py  test_raster_out.py  unification.py
bernd/data/: Ergebnis.dbf  ergebnis.tif  myENC.enc  myFields.fld  myML.mdl  myMeta.mta  myOhe.ohe  my_onehotencoder.enc  result.dbf  summe.tif  summek.tif  test1.tif  test1k.tif  test2.tif  test2k.tif
building/: build.spec  eis_toolkit_binary.spec  eis_toolkit_dir.spec  requirements.txt
building/hooks/: rasterio_hook.py
conversions/csv_to_geodataframe/: index.html
conversions/raster_to_dataframe/: index.html
data_tools/class_balancing/: index.html
dependency_licenses/: index.html
docs/: bayesian_nn.md  dependency_licenses.md  dummy.md  dummy_gdal.md  dummy_sklearn.md  index.md
docs/checks/: bounds.md  cell_size.md  pixel_alignment.md
docs/conversions/: csv_to_geodataframe.md  csv_to_geopandas.md  raster_to_dataframe.md  raster_to_pandas.md
docs/data_tools/: class_balancing.md
docs/dummy tests/: dummy gdal.md
docs/evaluation/: calculate_base_metrics.md  classification_label_evaluation.md  classification_probability_evaluation.md  plot_confusion_matrix.md  plot_nn_model_performance.md  plot_prediction_area_curves.md  plot_rate_curve.md
docs/prediction/: mlp.md  (+7 more)
eis_toolkit/: __main__.py  cli.py  cli_click.py  cli_config.py  cli_typer.py  config_test.json  dummy.py  dummy_gdal.py  dummy_rasterio.py  dummy_sklearn.py  exceptions.py  install_rasterio.py  requirements.txt  warnings.py
instructions/: adding_data.md  cli_testing.md  dev_setup_with_docker.md  dev_setup_without_docker.md  dev_setup_without_docker_with_conda.md  generating_dependency_licenses.md  generating_documentation.md  testing.md  using_jupyterlab.md
notebooks/: Bayesian_neural_network.ipynb  Final_LR_feature_importance.ipynb  Final_MLP_Probability.ipynb  Final_MLP_feature_importance.ipynb  Generative-adversarial-networks.ipynb  Mini_Unet_no_uncertainty.ipynb  Mini_Unet_with_uncertainty.ipynb  SMOTE_Tomek.ipynb  autoencoder_convolutional_geophysical.ipynb  cba_introduction.ipynb  cnn_data_sampler.ipynb  csv_to_geopandas.ipynb  distance_to_anomaly.ipynb  eis_toolkit_and_notebooks.ipynb  evaluation_functions.ipynb  fuzzy_wrapper.ipynb  general-instructions.ipynb  idw_test.ipynb  jupyter_introduction.ipynb  machine_learning_bnn_binary_classifier.ipynb  machine_learning_mlp.ipynb  machine_learning_rf_gb_lr.ipynb  mahalanobis.ipynb  parallel_coordinates.ipynb  pca_plot_testing.ipynb  surface_attributes.ipynb  test_plotting.ipynb  test_vector_interpolation.ipynb  testing-nb.ipynb  testing1.ipynb  testing_calculate_geometry.ipynb  testing_classifier_evaluation.ipynb  testing_clip.ipynb  testing_coregistering.ipynb  testing_distance_computation.ipynb  testing_extract_shared_lines.ipynb  testing_filters.ipynb  testing_idw.ipynb  testing_kriging.ipynb  testing_local_morans_i.ipynb  (+19 more)
search/: search_index.json
site/: 404.html  dummy.html  index.html  print_page.html  sitemap.xml
tests/: PCA.py  PCA_test.py  access.txt  all_import_featureclass_1test.py  all_import_grid_1test.py  all_nodata_remove_2test.py  all_nodata_replace_4test.py  all_onehotencoder_4test.py  all_separation_3test.py  all_unification_5test.py  binarize_test.py  calculate_auc_test.py  calculate_base_metrics_test.py  cba_test.py  check_prediction_11test.py  check_raster_grids_test.py  cli_test.py  clip_test.py  coregister_rasters_test.py  csv_to_geopandas_test.py  eis_toolkit_test.py  export_featureclass_13test.py  export_file_9test.py  export_grid_13test.py  extract_values_from_raster_test.py  fuzzy_test.py  gridding_check_test.py  import_featureclass_1test.py  import_file_10test.py  import_grid_1test.py  mlp_computation_best_model.py  mlp_computation_test.py  mlp_computation_with_tran_test_split.py  nodata_remove_2test.py  nodata_replace_4test.py  onehotencoder_4test.py  pca_test.py  plot_rate_curve_test.py  plotting_test.py  raster_to_pandas_test.py  (+41 more)
(+1321 files in other folders)
