[tool.poetry]
name = "eis_toolkit"
version = "0.1.0"
description = "EIS Toolkit is a comprehensive collection of tools suitable for mineral prospectivity mapping. This toolkit has been developed as part of the Exploration Information System project which has been funded by European Union."
authors = ["pavetsu14 <pauliina@gispo.fi>"]
maintainers = ["Gispo Ltd. <info@gispo.fi>"]
license = "MIT"
readme = "README.rst"
homepage = "https://eis-he.eu"
repository = "https://github.com/GispoCoding/eis_toolkit"
documentation = ""
keywords = [
    "Exploration",
    "Mineral prospectivity",
    "Horizon Europe",
    "Geology",
    "Packages"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gdal = "3.4.3"
rasterio = "1.3.0"
pandas = "1.4.3"
geopandas = "0.11.0"
scikit-learn = "1.1.1"
matplotlib = "3.5.2"
statsmodels = "0.13.2"
keras = "2.9.0"
tensorflow = "2.9.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.3"
pytest = "^5.2"
pre-commit = "2.19.0"
jinja2 = "3.0.3"
flake8 = "4.0.1"
flake8-docstrings = "1.6.0"
mkdocs= "1.1.2"
mkdocs-material = "7.1.5"
mkdocs-minify-plugin = "0.4.0"
mkdocs-git-revision-date-localized-plugin = "0.9.2"
mkdocs-git-authors-plugin = "0.3.3"
mkdocs-table-reader-plugin = "0.5"
mkdocs-img2fig-plugin = "0.9.3"
mknotebooks = "0.7.0"  # enables inclusion of Jupyter notebook in markdown page, necessary?
mkdocs-awesome-pages-plugin = "2.5.0"
mkdocs-enumerate-headings-plugin = "0.4.4"
mkdocs-print-site-plugin = "1.2.3"
mkgendocs = "0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/GispoCoding/eis_toolkit/issues"
