[tool.poetry]
name = "eis_toolkit"
version = "0.1.0"
description = "EIS Toolkit is a comprehensive collection of tools suitable for mineral prospectivity mapping. This toolkit has been developed as part of the Exploration Information System project which has been funded by European Union."
authors = ["pavetsu14 <pauliina@gispo.fi>"]
maintainers = ["Gispo Ltd. <info@gispo.fi>"]
license = "MIT"
readme = "README.md"
homepage = "https://eis-he.eu"
repository = "https://github.com/GispoCoding/eis_toolkit"
documentation = ""
keywords = [
    "Exploration",
    "Mineral prospectivity",
    "Horizon Europe",
    "Geology",
    "Packages"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gdal = "3.4.3"
rasterio = "^1.3.0"
pandas = "^1.4.3"
geopandas = "^0.11.1"
scikit-learn = "^1.1.2"
matplotlib = "^3.5.3"
statsmodels = "^0.13.2"
keras = "^2.9.0"
tensorflow = "^2.9.1"
mkdocs-material = "^8.4.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.5"
pytest = "^7.1.2"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
black = "^22.3.0"
mypy = "^0.942"
isort = "^5.10.1"
mkdocs= "^1.3.1"
mkdocs-material = "^8.4.0"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/GispoCoding/eis_toolkit/issues"

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true

[tool.black]
line-length = 120
exclude = ['D100']
