[tool.poetry]
name = "eis_toolkit"
version = "1.0.0"
description = "EIS Toolkit is a comprehensive collection of tools suitable for mineral prospectivity mapping. This toolkit has been developed as part of the Exploration Information System project which has been funded by European Union."
authors = []
maintainers = ["Gispo Ltd. <info@gispo.fi>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://eis-he.eu"
repository = "https://github.com/GispoCoding/eis_toolkit"
# See https://pypi.org/classifiers/
keywords = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.scripts]
eis = "eis_toolkit.cli:app"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gdal = ">=3.4.3,<4.0.0"
rasterio = "^1.3.0"
pandas = "^2.0.0"
geopandas = "^0.11.1"
scikit-learn = "^1.1.2"
matplotlib = "^3.5.3"
statsmodels = "^0.14.0"
keras = "^2.9.0"
tensorflow = "^2.9.1"
beartype = "^0.13.1"
seaborn = ">=0.13.0,<1.0.0"
pykrige = "^1.7.0"
rtree = "^1.0.1"
typer = {extras = ["all"], version = "^0.9.0"}
imbalanced-learn = "^0.11.0"
pysal = "^23.7"
esda = "^2.5.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.5"
pytest = "^7.1.2"
invoke = "^1.7.1"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
black = "^22.3.0"
mypy = "^0.942"
isort = "^5.10.1"
mkdocs= "^1.5.0"
mkdocs-material = "^9.4.7"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.0"
mkdocs-with-pdf = "^0.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/GispoCoding/eis_toolkit/issues"

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true

[tool.black]
line-length = 120
exclude = ['D100']
